lang/macro/tests/ui/fail/11-unsafe-function.stderr
error: `unsafe` is not supported for functions in liquid contract
  --> $DIR/11-unsafe-function.rs:13:9
   |
13 |         unsafe fn noop(&self) {}
   |         ^^^^^^
